2006-04-19  Mikael Hallendal  <micke@imendio.com>

	* Landing a patch by Martyn Russell for Win32.

	* configure.ac: Updated for Win32 work
	* examples/*: Updated and improved.
	* loudmouth/Makefile.am:
	* loudmouth/lm-connection.c:
	- Abstracted out the low level socket handling to lm-sock.[ch] to make
	  this file clean from OS dependant socket code.
	* loudmouth/lm-internals.h:
	* loudmouth/lm-parser.c:
	* loudmouth/lm-proxy.c:
	* loudmouth/lm-sha.c: 
	* loudmouth/lm-utils.c:
	- Win32 work
	* loudmouth/lm-sock.[ch]: 
	- Network abstraction layer.

2006-04-18  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-openssl.c: (_lm_ssl_begin):
	- Fixed an issue reported by Martyn when using non-blocking sockets.

2006-04-12  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh:
	* configure.ac:
	* configure.in:
	- Bumped the autoconf and automake requirements.
	- Added support to compile with --with-ssl=gnutls|openssl|no. The
	  default is to build against gnutls and you must explicitely tell that
	  you don't want SSL support or configure will fail if you don't have
	  GnuTLS (or building with --with-ssl=openssl).
	* loudmouth/Makefile.am:
	* loudmouth/lm-ssl-openssl.c:
	- Added an OpenSSL backend. Currently doesn't verify certificates.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Define HAVE_SSL which will be set if GnuTLS or OpenSSL
	  is supported.
	* loudmouth/Makefile.am:
	* loudmouth/lm-connection.c:
	* loudmouth/lm-internals.h:
	* loudmouth/lm-ssl-base.[ch]:
	* loudmouth/lm-ssl-generic.c:
	* loudmouth/lm-ssl-gnutls.c:
	* loudmouth/lm-ssl-internals.h: Took out the SSL functions from
	  lm-internals.h
	* loudmouth/lm-ssl.[ch]:
	- Refactored the SSL stuff to make room for an OpenSSL implementation.
	- lm-ssl-generic and lm-ssl-base contains the shared parts between the
	  GnuTLS and the OpenSSL implementations. lm-ssl-gnutls.c will contain
	  GnuTLS specifics and lm-ssl-openssl.c will contain OpenSSL.
