@@ -100,18 +100,13 @@ AC_SUBST(HTML_DIR)
 AC_CHECK_PROG(GTKDOC, gtkdoc-mkdb, true, false)
 
 gtk_doc_min_version=1.0
-if $GTKDOC ; then 
-  gtk_doc_version=`gtkdoc-mkdb --version`
-  AC_MSG_CHECKING([for gtk-doc version ($gtk_doc_version) >= $gtk_doc_min_version])
-  if perl <<EOF ; then
-    exit (("$gtk_doc_version" =~ /^[[0-9]]+\.[[0-9]]+$/) &&
-          ("$gtk_doc_version" >= "$gtk_doc_min_version") ? 0 : 1);
-EOF
-    AC_MSG_RESULT(yes)
-  else
-    AC_MSG_RESULT(no)
-    GTKDOC=false
-  fi
+AC_MSG_CHECKING([gtk-doc version >= $gtk_doc_min_version])
+if pkg-config --atleast-version=$gtk_doc_min_version gtk-doc; then
+  AC_MSG_RESULT(yes)
+  GTKDOC=true
+else
+  AC_MSG_RESULT(no)
+  GTKDOC=false
 fi
 
 dnl Let people disable the gtk-doc stuff.
@@ -128,7 +123,8 @@ if test x$enable_gtk_doc = xauto ; then
   fi
 fi
 
-AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
+dnl Gtk doc
+GTK_DOC_CHECK(1.0)
 
 dnl define a MAINT-like variable REBUILD which is set if Perl
 dnl and awk are found, so autogenerated sources can be rebuilt
